Fix(side-menu): shows text when initial state is `collapsed` (#1948)
* fix(side-menu): fix `collapsed` value not applied when starting as true
* test(side-menu): add test to verify that `collapsed` initial value is applied

---------

--- a/packages/core/src/components/side-menu/side-menu.scss
+++ b/packages/core/src/components/side-menu/side-menu.scss
@@ -1,4 +1,4 @@
-//@import '../theme/core/spacing/vars';
+// @import '../theme/core/spacing/vars';
 @use '../../../../../grid-deprecated/vars' as *;
 @use '../../mixins/scrollbar' as *;
 @use '../../mixins/z-index' as *;
@@ -143,7 +143,7 @@ aside {
     overflow-y: auto;
   }
 
-  [role='navigation'] {
+  nav {
     height: 100%;
     display: flex;
     flex-direction: column;
